--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start_node": "node server.js",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -13,10 +14,14 @@
     "@types/node": "^22.10.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "antd": "^5.22.6",
     "aos": "^2.3.4",
     "autoprefixer": "10.4.15",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "express": "^4.21.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "13.4.19",
