--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "express": "^4.21.2",
+    "iconsax-react": "^0.0.8",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "13.4.19",
